<resources>
    <string name="app_name">Boom</string>
    <string name="show_text_user">Boom!\nYour Book-owl Friend!</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="heroes">Heroes</string>
    <string name="title">Title</string>
    <string name="sample_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</string>
    <string name="science">Scientific</string>
    <string name="philosophy">Philosophy</string>
    <string name="story">Story</string>
    <string name="search_message">Search books…</string>
    <string name="name">Name</string>
    <string name="sample_name">Sample Name</string>
    <string name="delete_message">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes!</string>
    <string name="welcome_text">Welcome to Boom!</string>
    <string name="detail_welcome">Read and search with Boom about books!</string>
    <string name="desc_welcome">Description</string>
    <string name="desc_welcome_desc">You can use Boom to read books and make fun for kids. Boom allows you to read books offline, but for better performance of the application, it is better to use the application online. It is possible to make changes by long clicking.\nPlease, let me know if you have an idea about the application.\nThis application is mostly for kids. They can read and play with heroes. Game and reading together!\nFor a better view, turn the phone ninety degrees.</string>
    <string name="contact_txt">Contact me:</string>
    <string name="contact_data">fekri8614@gmail.com</string>
    <string name="more">More!</string>
    <string name="free_books">Free books!</string>
    <string name="visit_library">Visit Library!</string>
    <string name="read_more">Read More!</string>
    <string name="error_message">Something went wrong. Try to refresh page.</string>
    <string name="sample_news">Some random news , Some random news , Some random news</string>
    <string name="book_price">Book Price:</string>
    <string name="hero_name">Hero name</string>
    <string name="hero_full_name">Hero full name</string>
    <string name="accept">Accept</string>
    <string name="go">Go</string>
    <string name="sure">Sure!</string>
    <string name="our_suggestions">Our Suggestions</string>
    <string name="amazon_library">Amazon library</string>
    <string name="amazon">Amazon</string>
    <string name="new_york_public_library">New York Public Library</string>
    <string name="oxford_owl">Oxford Owl</string>
    <string name="no_data_error">There is nothing to show!</string>
    <string name="published_date">Published date</string>
    <string name="aliases">Aliases</string>
    <string name="make_sure_buy">Let\'s make sure, that you really want to buy</string>
    <string name="i_m_sure_to_buy">I\'m sure to buy</string>
    <string name="i_want_to_buy">I just want to buy</string>
    <string name="i_want_to_read">I just want to read</string>
    <string name="developer_mohammad_reza_fekri">Developed by Mohammad-Reza Fekri</string>
    <string name="first_app">First Appearance</string>
    <string name="place_birth">Place of birth</string>
    <string name="publisher">Publisher</string>
    <string name="occupation">Occupation</string>
    <string name="group_affiliation">Affiliation</string>
    <string name="relation">Relation</string>
    <string name="powers">Powers</string>
    <string name="book_name">Book name</string>
    <string name="appearance">Appearance</string>
    <string name="books">books</string>
    <string name="book_pages">Book Pages</string>
    <string name="sub_title">Subtitle</string>
    <string name="description">Description</string>
    <string name="buy">Buy</string>
    <string name="preview">Preview</string>
    <string name="history">History</string>
    <string name="read_offline">Read offline</string>
    <string name="library">Library</string>
    <string name="audio_library">Audio library</string>
    <string name="watch">Watch</string>
    <string name="all">All</string>
    <string name="this_ability_will_be_added">This ability will be added</string>
    <string name="dialog_profile_message">It shows how many books you have read</string>
    <string name="imagination">Imagination</string>
    <string name="poems">Poems</string>
    <string name="for_you_free">For you(free)</string>
    <string name="pdf">PDF</string>
    <string name="about">About!</string>
    <string name="game">Game (kids)</string>
    <string name="read">Read</string>
</resources>