<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|top"
        android:orientation="vertical"
        android:padding="@dimen/space_16x">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lav_actionBar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:scaleType="centerCrop"
            app:lottie_autoPlay="true"
            app:lottie_fileName="lovely-owl.json"
            app:lottie_loop="true" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/CoinBitText.Body3.Dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_8x"
            android:text="@string/welcome_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_8x"
            android:text="@string/detail_welcome" />

        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_8x"
            android:background="@color/background_main" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16x">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtTitleDialog"
                style="@style/CoinBitText.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc_welcome"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/CoinBitText.BodyAlternate.Small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/desc_welcome_desc"
                app:guidelineUseRtl="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtTitleDialog" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_16x"
            android:background="@color/background_main" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/CoinBitText.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_16x"
            android:text="@string/developer_mohammad_reza_fekri" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16x">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtContactDialog"
                style="@style/CoinBitText.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/CoinBitText.BodyAlternate.Small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:padding="@dimen/space_8x"
                android:text="@string/contact_data"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtContactDialog" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_go_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/space_8x"
            android:text="@string/go"
            style="@style/CoinBitText.Title.Light"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>
